# tyl-lang

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
docs/: OPTIMIZATION_ANALYSIS.md
examples/: closure_test.tyl  gc_test.tyl  reassign_asm.txt  reassign_simple_asm.txt  spec_associated_types.tyl  spec_hygienic_macros.tyl  spec_multi_assign.tyl  test_1based.tyl  test_1based2.tyl  test_1based3.tyl  test_adce.tyl  test_advanced_concurrency.tyl  test_all.tyl  test_all_finalized.tyl  test_all_fixes.tyl  test_allocator_gc.tyl  test_any_type.tyl  test_arithmetic.tyl  test_asm.tyl  test_async.tyl  test_async2.tyl  test_async3.tyl  test_async4.tyl  test_atomic.tyl  test_atomic_cas.tyl  test_atomic_concat.tyl  test_atomic_load_after_store.tyl  test_atomic_simple.tyl  test_atomic_store.tyl  test_atomic_str.tyl  test_atomic_str2.tyl  test_atomic_str3.tyl  test_atomic_str4.tyl  test_atomic_str5.tyl  test_atomic_str6.asm  test_atomic_str6.tyl  test_atomic_str7.asm  test_atomic_str7.tyl  test_atomic_str8.tyl  test_attrs.tyl  (+478 more)
src/: main.cpp
src/backend/codegen/: codegen_base.h  codegen_builtins.cpp  codegen_call.cpp  codegen_core.cpp  codegen_decl.cpp  codegen_expr.cpp  codegen_ffi.cpp  codegen_gc.cpp  codegen_stmt.cpp  codegen_traits.cpp  global_register_allocator.cpp  global_register_allocator.h  native_codegen.h  register_allocator.cpp  register_allocator.h  vectorizer.cpp  vectorizer.h
src/backend/codegen/call/: codegen_call_builtins.cpp  codegen_call_builtins_complex.cpp  codegen_call_builtins_conv.cpp  codegen_call_builtins_gc.cpp  codegen_call_builtins_io.cpp  codegen_call_builtins_list.cpp  codegen_call_builtins_list_ext.cpp  codegen_call_builtins_math.cpp  codegen_call_builtins_math_ext.cpp  codegen_call_builtins_memory.cpp  codegen_call_builtins_numeric.cpp  codegen_call_builtins_result.cpp  codegen_call_builtins_string.cpp  codegen_call_builtins_string_ext.cpp  codegen_call_builtins_system.cpp  codegen_call_builtins_system_ext.cpp  codegen_call_builtins_time_ext.cpp  codegen_call_core.cpp  codegen_call_dispatch.cpp
src/backend/codegen/core/: codegen_compile.cpp  codegen_const_eval.cpp  codegen_helpers.cpp  codegen_print.cpp  codegen_record_layout.cpp  codegen_type_utils.cpp
src/backend/codegen/decl/: codegen_decl_fn.cpp  codegen_decl_program.cpp  codegen_decl_types.cpp
src/backend/codegen/expr/: codegen_expr_advanced_concurrency.cpp  codegen_expr_assign.cpp  codegen_expr_async.cpp  codegen_expr_binary.cpp  codegen_expr_channel.cpp  codegen_expr_collections.cpp  codegen_expr_index.cpp  codegen_expr_lambda.cpp  codegen_expr_list.cpp  codegen_expr_literals.cpp  codegen_expr_misc.cpp  codegen_expr_pointer.cpp  codegen_expr_record.cpp  codegen_expr_smart_ptr.cpp  codegen_expr_sync.cpp
src/backend/codegen/stmt/: codegen_stmt_assign.cpp  codegen_stmt_control.cpp  codegen_stmt_misc.cpp  codegen_stmt_vardecl.cpp  codegen_stmt_vars.cpp
src/backend/gc/: allocator.cpp  allocator.h  gc.cpp  gc.h  gc_runtime.h
src/backend/linker/: linker.h  linker_base.h  linker_core.cpp  linker_dll.cpp  linker_layout.cpp  linker_output.cpp  linker_symbols.cpp
src/backend/object/: object_file.cpp  object_file.h
src/backend/runtime/: value.h
src/backend/x64/: pe_generator.cpp  pe_generator.h  peephole.cpp  peephole.h  x64_asm_callee_saved.cpp  x64_asm_core.cpp  x64_asm_sse.cpp  x64_assembler.cpp  x64_assembler.h
src/cli/: ast_printer.cpp  ast_printer.h
src/common/: common.h  diagnostics.h  errors.h  platform.h  types.h
src/frontend/ast/: ast.cpp  ast.h
src/frontend/lexer/: lexer.h  lexer_base.h  lexer_core.cpp  lexer_scan.cpp
src/frontend/macro/: syntax_macro.cpp  syntax_macro.h
src/frontend/parser/: parser_base.h  parser_core.cpp  parser_decl_macros.cpp  parser_decl_modules.cpp  parser_decl_traits.cpp  parser_decl_types.cpp  parser_declarations.cpp  parser_expr_infix.cpp  parser_expr_pratt.cpp  parser_expressions.cpp  parser_statements.cpp  parser_types.cpp
src/frontend/token/: token.h
src/semantic/checker/: checker_base.h  checker_core.cpp  checker_decl.cpp  checker_expr.cpp  checker_stmt.cpp  type_checker.h
src/semantic/ctfe/: ctfe_interpreter.cpp  ctfe_interpreter.h
src/semantic/expander/: expander_base.h  expander_clone.cpp  expander_core.cpp  expander_expand.cpp  macro_expander.h
src/semantic/generics/: ast_cloner.cpp  ast_cloner.h  monomorphizer.cpp  monomorphizer.h
src/semantic/module/: module_system.cpp  module_system.h
src/semantic/optimizer/: algebraic.cpp  algebraic.h  constant_propagation.cpp  cse.cpp  cse.h  ctfe.cpp  ctfe.h  dead_code.cpp  inlining.cpp  inlining.h  instruction_scheduler.cpp  loop_optimizer.cpp  loop_optimizer.h  optimizer.cpp  optimizer.h  pgo.cpp  ssa.h  tail_call.cpp
src/semantic/optimizer/analysis/: instruction_scheduler.cpp  instruction_scheduler.h  pgo.cpp  pgo.h  ssa.cpp  ssa.h
src/semantic/optimizer/cfg/: jump_threading.cpp  jump_threading.h  simplify_cfg.cpp  simplify_cfg.h
src/semantic/optimizer/function/: ctfe.cpp  ctfe.h  inlining.cpp  tail_call.h
src/semantic/optimizer/ipo/: dead_arg_elim.cpp  dead_arg_elim.h  global_opt.cpp  global_opt.h  ipsccp.cpp  ipsccp.h  partial_inlining.cpp  partial_inlining.h  speculative_devirt.cpp  speculative_devirt.h
src/semantic/optimizer/loop/: enhanced_licm.cpp  enhanced_licm.h  indvar_simplify.cpp  indvar_simplify.h  loop_deletion.cpp  loop_deletion.h  loop_idiom.cpp  loop_idiom.h  loop_optimizer.cpp  loop_optimizer.h  loop_peeling.cpp  loop_peeling.h  loop_rotation.cpp  loop_rotation.h  loop_simplify.cpp  loop_simplify.h  loop_unswitch.cpp  loop_unswitch.h
src/semantic/optimizer/scalar/: adce.cpp  adce.h  bdce.cpp  bdce.h  constant_folding.cpp  constant_folding.h  constant_propagation.cpp  constant_propagation.h  constraint_elimination.cpp  constraint_elimination.h  correlated_propagation.cpp  correlated_propagation.h  dead_code.cpp  dead_code.h  dead_store.cpp  dead_store.h  gvn.cpp  gvn.h  gvn_pre.cpp  gvn_pre.h  mem2reg.cpp  (+7 more)
src/semantic/ownership/: ownership.cpp  ownership.h
src/semantic/symbols/: symbol_table.cpp  symbol_table.h
src/semantic/types/: types.cpp  types.h
